--- a/oma2/oma2/oma2-Info.plist
+++ b/oma2/oma2/oma2-Info.plist
@@ -4,10 +4,68 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>o2s</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>Oma2Settings</string>
+			<key>CFBundleTypeName</key>
+			<string>Oma2 Settings</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.oma-x.oma2.settings</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>o2d</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>Oma2Data</string>
+			<key>CFBundleTypeName</key>
+			<string>Oma2 Data</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.oma-x.oma2.data</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>o2m</string>
+				<string>mac</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>Oma2Macro</string>
+			<key>CFBundleTypeName</key>
+			<string>Oma2 Macro</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.oma-x.oma2.macro</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>oma-icns.icns</string>
+	<string>oma2Icons</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.oma-x.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -25,10 +83,71 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012 Yale University. All rights reserved.</string>
+	<string>Copyright © 2013 OMA developers. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Oma2 Settings</string>
+			<key>UTTypeIconFile</key>
+			<string>Oma2Settings</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.oma-x.oma2.settings</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>o2s</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Oma2 Data</string>
+			<key>UTTypeIconFile</key>
+			<string>Oma2Data</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.oma-x.oma2.data</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>o2d</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.text</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Oma2 Macro</string>
+			<key>UTTypeIconFile</key>
+			<string>Oma2Macro</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.oma-x.oma2.macro</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>o2m</string>
+					<string>mac</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
