--- a/oma2/oma2/oma2-Info.plist
+++ b/oma2/oma2/oma2-Info.plist
@@ -75,11 +75,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>BR1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
@@ -144,7 +144,6 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>o2m</string>
-					<string>mac</string>
 				</array>
 			</dict>
 		</dict>
