--- a/oma2/oma2cam-Info.plist
+++ b/oma2/oma2cam-Info.plist
@@ -67,7 +67,7 @@
 	<key>CFBundleIconFile</key>
 	<string>oma2Icons</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.oma-x.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
